feat: 新增管理员后台 - 用户反馈管理系统
- 创建 admin.html 管理员后台页面
- 添加 /api/admin/feedback 管理员API接口
- 实现反馈统计、筛选、查看功能
- 支持按类别、状态、时间筛选反馈
- 美观的管理界面，实时数据展示
- 添加 ADMIN_KEY 环境变量进行权限控制

访问地址：https://aistone.org/admin.html?admin_key=密钥

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -55,6 +55,7 @@ DEFAULT_AUDIO_VOICE = "nova"
 
 # 认证配置
 JWT_SECRET = "your-super-secret-jwt-key-change-this-in-production"
+ADMIN_KEY = "aistone-admin-2025-secure-key"
 
 # 日志配置
 LOG_LEVEL = "info"
