--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "lint": "eslint \"frontend/js/**/*.js\" \"backend/**/*.js\"",
     "lint:fix": "eslint \"frontend/js/**/*.js\" \"backend/**/*.js\" --fix",
     "format": "prettier --write \"**/*.{js,css,html,json,md}\"",
-    "format:check": "prettier --check \"**/*.{js,css,html,json,md}\""
+    "format:check": "prettier --check \"**/*.{js,css,html,json,md}\"",
+    "prepare": "husky"
   },
   "author": "",
   "license": "ISC",
+  "lint-staged": {
+    "**/*.{js,css,html,json,md}": [
+      "prettier --write"
+    ],
+    "{frontend/js,backend}/**/*.js": [
+      "eslint --fix"
+    ]
+  },
   "devDependencies": {
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.0",
     "prettier": "^3.6.2",
     "wrangler": "^4.33.1"
   }
