chore(eslint): allow empty catch blocks to reduce noise; no behavior change

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
     "prefer-const": ["warn", { "ignoreReadBeforeAssign": true }],
     "no-unused-vars": ["warn", { "args": "none", "ignoreRestSiblings": true }],
     "no-console": "off",
-    "no-empty": "warn",
+    "no-empty": ["warn", { "allowEmptyCatch": true }],
     "import/order": [
       "warn",
       {
