chore: finalize refactor docs and tests

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "text2image-audio",
   "version": "1.0.0",
   "description": "A Cloudflare Worker for text-to-image and text-to-audio generation.",
+  "type": "module",
   "main": "backend/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "node --test",
+    "test:integration": "node tests/integration/run.js",
+    "health:check": "node scripts/health-check.mjs",
     "deploy": "wrangler deploy",
     "lint": "eslint \"frontend/js/**/*.js\" \"backend/**/*.js\"",
     "lint:fix": "eslint \"frontend/js/**/*.js\" \"backend/**/*.js\" --fix",
